# ChessEngine

./: .gitignore  Cargo.toml  README.md
ChessEngine/helper_scripts/: generate_knight_attacks.py
ChessEngine/src/: board.rs  lib.rs  main.rs  move.rs
ChessEngine/tests/: bishop_move_generation.rs  board_to_fen_conversion.rs  king_move_generation.rs  move_to_algebraic_conversion.rs  perft.rs  rook_move_generation.rs
benches/: eval.rs  perft.rs
helper_scripts/: convert_epd.py  generate_attacking_pawns.py  generate_king_attacks.py  generate_pawn_attacks.py  generate_premasks.py  grafical_bitboard_generator.py  hexlist_to_binlist.py  test
progress_tracking/: collect_benchmarks.py  progress.xlsx
scripts/: board_to_bitboards.py  display_game.py
src/: board.rs  board_evaluation.rs  board_helpers.rs  board_init.rs  board_representation.rs  display.rs  engine.rs  eval.rs  lib.rs  main.rs  move.rs  move_generation.rs  move_searching.rs  parsing.rs  psqt.rs  search.rs  square.rs  tt.rs  uci.rs  zobrist.rs
src/benchmark/: stockfish_1v1.py  stockfish_accuracy.py  stockfish_moves.txt
src/enums/: squares.rs
src/eval/: basic.rs  mod.rs  piece_square_tables.rs
src/evaluation/: consts.rs  eval.rs  mod.rs
src/helpers/: bitboard.rs
src/move_search/: alpha_beta.rs  alphabeta.rs  minmax.rs  mod.rs
src/movegen/: legal_check.rs  (+6 more)
tests/: board_to_fen_conversion.rs  castling_under_attack.rs  is_square_attacked.rs  knight_move_generation.rs  make_undo.rs  move_to_algebraic_conversion.rs  pawn_move_generation.rs  perft.rs  queen_move_generation.rs  rook_move_generation.rs
(+10 files in other folders)
