[package]
name = "ChessEngine"
version = "0.1.0"
authors = ["Moritz Eigenauer <moritz.eigenauer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
lazy_static = "1.4.0"
chess = "3.2.0"
dirs = "3.0"
phf = { version = "0.11.2", features = ["macros"] }